rewrite HTTP requests using Java 11 HTTP components